[package]
name = "rusty_doom"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
device_query = "0.2"
# enigo = "0.0.14"
rand = "0.8.5"
lazy_static = "1.4"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
renet = "0.0.16"
matchbox_socket = "0.10"
tokio = { version = "1", features = ["full"] }
base64ct = "=1.6.0"
futures = "0.3"
